--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cryptography==37.0.4
 cycler==0.11.0
 cymem==2.0.6
 Cython==0.29.28
+debugpy==1.6.3
 emoji==2.0.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0-py3-none-any.whl
 filelock==3.8.0
@@ -29,10 +30,12 @@ gensim==4.2.0
 google-auth==2.11.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+graphviz==0.20.1
 grpcio==1.47.0
 h11==0.13.0
 h5py==3.7.0
 hdbscan==0.8.28
+hnswlib==0.6.2
 huggingface-hub==0.8.1
 idna==3.3
 importlib-metadata==4.12.0
